flycheck-stan/examples/example_failure_and_info_misspelled_block.stanc3out.txt

Warning: deprecated language construct used in 'examples/example_failure_and_info_misspelled_block.stan', line 1, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
         ^
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
     3:  data {
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Warning: deprecated language construct used in 'examples/example_failure_and_info_misspelled_block.stan', line 2, column 0:
   -------------------------------------------------
     1:  # The Eight Schools example with non-centered parametrization.
     2:  # https://mc-stan.org/bayesplot/articles/visual-mcmc-diagnostics.html
         ^
     3:  data {
     4:    int<lower=0> J;
   -------------------------------------------------

Comments beginning with # are deprecated. Please use // in place of # for line comments.


Syntax error in 'examples/example_failure_and_info_misspelled_block.stan', line 3, column 0 to line 7, column 1, parsing error:
   -------------------------------------------------
     5:    vector[J] y;
     6:    vector<lower=0>[J] sigma;
     7:  }
          ^
     8:  pparameters {
     9:    real mu;
   -------------------------------------------------

Expected "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


